Fix overflow on cta banner

--- a/src/components/cta_banner/_cta_banner.scss
+++ b/src/components/cta_banner/_cta_banner.scss
@@ -1,4 +1,5 @@
-.great-ds-cta-banner{
+.great-ds-cta-banner {
+  overflow: hidden;
   background-color: $great-ds-semantic-surface-background-light-blue
 }
 
